--- a/VIMS_Panels.ipynb
+++ b/VIMS_Panels.ipynb
@@ -454,6 +454,180 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_2D_plots(folder_directory, axes, xlims=None,ylims=None):\n",
+    "    \"\"\"\n",
+    "    Given a directory containing cub files, creates a plot between y (means, sigmas, amps) and x (navigation variable).\n",
+    "    \n",
+    "    Gaussian Key:\n",
+    "    'Mean':0,\n",
+    "    'Sigma': 1,\n",
+    "    'Amplitudes':2\n",
+    "    \n",
+    "    Navigation Key:\n",
+    "    'Number of Counts':0,\n",
+    "    'Phase':1,\n",
+    "    'Emission':2, \n",
+    "    'Incidence':3, \n",
+    "    'Local Emission':4 , \n",
+    "    'Local Incidence':5,\n",
+    "    'Latitude': 6,\n",
+    "    'Longitude': 7,  \n",
+    "    'Pixel Resolution': 8,  \n",
+    "    'Line Resolution': 9,  \n",
+    "    'Sample Resolution': 10,  \n",
+    "    'Detector Resolution': 11,  \n",
+    "    'North Azimuth': 12,\n",
+    "    'Sun Azimuth': 13,  \n",
+    "    'Spacecraft Azmituh': 14, \n",
+    "    'Off Nadir Angle': 15,\n",
+    "    'Subspacecraft Ground Azimuth': 16,\n",
+    "    'Subsolar Ground Azimuth': 17,\n",
+    "    'Morphology': 18,\n",
+    "    'Albedo': 19,\n",
+    "    'Right Ascension': 20,\n",
+    "    'Declination': 21,\n",
+    "    'Body Fixed Coordinate X': 22,\n",
+    "    'Body Fixed Coordinate Y': 23,\n",
+    "    'Body Fixed Coordinate Z': 24\n",
+    "    \n",
+    "    \n",
+    "    \"\"\"\n",
+    "\n",
+    "    nav_info = {\n",
+    "        'Number of Counts': 0,\n",
+    "        'Phase': 1,\n",
+    "        'Emission': 2,\n",
+    "        'Incidence': 3,\n",
+    "        'Local Emission': 4,\n",
+    "        'Local Incidence': 5,\n",
+    "        'Latitude': 6,\n",
+    "        'Longitude': 7,\n",
+    "        'Pixel Resolution': 8,\n",
+    "        'Line Resolution': 9,\n",
+    "        'Sample Resolution': 10,\n",
+    "        'Detector Resolution': 11,\n",
+    "        'North Azimuth': 12,\n",
+    "        'Sun Azimuth': 13,\n",
+    "        'Spacecraft Azmituh': 14,\n",
+    "        'Off Nadir Angle': 15,\n",
+    "        'Subspacecraft Ground Azimuth': 16,\n",
+    "        'Subsolar Ground Azimuth': 17,\n",
+    "        'Morphology': 18,\n",
+    "        'Albedo': 19,\n",
+    "        'Right Ascension': 20,\n",
+    "        'Declination': 21,\n",
+    "        'Body Fixed Coordinate X': 22,\n",
+    "        'Body Fixed Coordinate Y': 23,\n",
+    "        'Body Fixed Coordinate Z': 24\n",
+    "    }\n",
+    "    fig=plt.figure()\n",
+    "    num_of_subplots=len(axes)\n",
+    "    rows=num_of_subplots//2 if num_of_subplots%2==0 else num_of_subplots//2+1\n",
+    "    ref = {'Mean': 0, 'Sigma': 1, 'Amplitudes': 2}\n",
+    "    index=1\n",
+    "    for x,y in axes:\n",
+    "        \n",
+    "        assert (y in ref or y in nav_info) and (x in ref or x in nav_info), 'Invalid axes'\n",
+    "        \n",
+    "        print(f'Current Axes: {x}, {y}')\n",
+    "        y_vals = []\n",
+    "        x_vals = []\n",
+    "\n",
+    "        isnav_x = x in nav_info\n",
+    "        isnav_y = y in nav_info\n",
+    "\n",
+    "        failed = 0\n",
+    "        done = 0\n",
+    "\n",
+    "        files = os.listdir(folder_directory)\n",
+    "\n",
+    "        #loop through files\n",
+    "\n",
+    "        for file in files:\n",
+    "            if file[0:2] != 'CM' or 'nav' in file or 'BKGD' in file:\n",
+    "                continue\n",
+    "            else:\n",
+    "                print(f'Working on: {file}')\n",
+    "                try:\n",
+    "                    #create guassian array for each file\n",
+    "\n",
+    "                    data = pysis.CubeFile(f'{folder_directory}/{file}').data\n",
+    "                    lbl = pysis.CubeFile(f'{folder_directory}/{file}').label\n",
+    "                    nav = pysis.CubeFile(\n",
+    "                        f'{folder_directory}/{file[:-4]}_nav.cub').data\n",
+    "                    length = lbl['IsisCube']['Instrument']['SwathLength']\n",
+    "                    width = lbl['IsisCube']['Instrument']['SwathWidth']\n",
+    "                    vals = create_gaussian_array(\n",
+    "                        data, nav, lbl['IsisCube']['Instrument']['SwathLength'],\n",
+    "                        lbl['IsisCube']['Instrument']['SwathWidth'])\n",
+    "\n",
+    "                    for i in range(length):\n",
+    "                        for j in range(width):\n",
+    "                            if nav[6, i, j] < -90:\n",
+    "                                continue\n",
+    "\n",
+    "                            if isnav_x:\n",
+    "                                x_vals.append(nav[nav_info[x],i,j])\n",
+    "                            elif not isnav_x:\n",
+    "                                x_vals.append(vals[ref[x]][i,j])\n",
+    "\n",
+    "                            if isnav_y:\n",
+    "                                y_vals.append(nav[nav_info[y],i,j])\n",
+    "                            elif not isnav_y:\n",
+    "                                y_vals.append(vals[ref[y]][i,j])\n",
+    "\n",
+    "                           \n",
+    "\n",
+    "                    done += 1\n",
+    "\n",
+    "                except Exception as e:\n",
+    "                    failed += 1\n",
+    "                    print(\n",
+    "                        f'File {file} out of {failed} failures and {done} completed with error {e}'\n",
+    "                    )\n",
+    "\n",
+    "        #Print summary and display scatter plot\n",
+    "        print('\\n====SUMMARY====')\n",
+    "        print(f'Files failed: {failed}')\n",
+    "        print(f'Files done: {done}')\n",
+    "        print(f'Total files: {failed+done}')\n",
+    "        print('===============\\n')\n",
+    "        #fig = plt.figure()\n",
+    "        ax = fig.add_subplot(rows,num_of_subplots,index)\n",
+    "        ax.scatter(x_vals, y_vals, s=2)\n",
+    "        ax.set_xlabel(x)\n",
+    "        ax.set_ylabel(y)\n",
+    "        if xlims != None and index in xlims:\n",
+    "            ax.set_xlim3d(xlims[index][0], xlims[index][1])\n",
+    "        if ylims != None and index in ylims:\n",
+    "            ax.set_ylim3d(ylims[index][0], ylims[index][1])\n",
+    "        ax.title.set_text(f'{x} and {y}')\n",
+    "        index+=1\n",
+    "        #plt.show()    # fig = plt.figure()\n",
+    "    # #ax = fig.add_subplot(111,projection='3d')\n",
+    "    # number_of_subplots=2\n",
+    "    # for i, v in enumerate(range(number_of_subplots)):\n",
+    "    #     #v+=1\n",
+    "    #     ax=subplot(f'{1}{number_of_subplots}{v}', projection='3d')\n",
+    "    #     #ax.plot(x,y)\n",
+    "    #     X = [1,2,3,4,5,6,7,8,9]\n",
+    "    #     Y = [5,6,2,3,13,4,1,2,4]\n",
+    "    #     Z = [2,3,3,3,5,6,7,1,10]\n",
+    "\n",
+    "    #     ax.scatter(X,Y,Z, c='r',marker='o')\n",
+    "    #     ax.set_xlabel('x axis')\n",
+    "    #     ax.set_ylabel('y axis')\n",
+    "    #     ax.set_zlabel('z axis')\n",
+    "\n",
+    "    plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1000,6 +1174,60 @@
     "    #     ax.set_zlabel('z axis')\n",
     "\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current Axes: Emission, Incidence\n",
+      "Working on: CM_1514277149_1_ir.cub\n",
+      "Working on: CM_1514280779_1_ir.cub\n",
+      "Working on: CM_1514282576_1_ir.cub\n",
+      "Working on: CM_1514280052_1_ir.cub\n",
+      "Working on: CM_1514278619_1_ir.cub\n",
+      "Working on: CM_1514280412_1_ir.cub\n",
+      "Working on: CM_1514284191_1_ir.cub\n",
+      "Working on: CM_1514277541_1_ir.cub\n",
+      "Working on: CM_1514281143_1_ir.cub\n",
+      "Working on: CM_1514282941_1_ir.cub\n",
+      "Working on: CM_1514277901_1_ir.cub\n",
+      "\n",
+      "====SUMMARY====\n",
+      "Files failed: 0\n",
+      "Files done: 11\n",
+      "Total files: 11\n",
+      "===============\n",
+      "\n",
+      "Current Axes: Amplitudes, Incidence\n",
+      "Working on: CM_1514277149_1_ir.cub\n",
+      "Working on: CM_1514280779_1_ir.cub\n",
+      "Working on: CM_1514282576_1_ir.cub\n",
+      "Working on: CM_1514280052_1_ir.cub\n",
+      "Working on: CM_1514278619_1_ir.cub\n",
+      "Working on: CM_1514280412_1_ir.cub\n",
+      "Working on: CM_1514284191_1_ir.cub\n",
+      "Working on: CM_1514277541_1_ir.cub\n",
+      "Working on: CM_1514281143_1_ir.cub\n",
+      "Working on: CM_1514282941_1_ir.cub\n",
+      "Working on: CM_1514277901_1_ir.cub\n",
+      "\n",
+      "====SUMMARY====\n",
+      "Files failed: 0\n",
+      "Files done: 11\n",
+      "Total files: 11\n",
+      "===============\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "create_2D_plots('/home/alanyu/Dropbox (MIT)/VIMS_UROP/2005359T100445_2005360T101919',[('Emission','Incidence'),('Amplitudes','Incidence')])"
    ]
   },
   {
