--- a/VIMS_Panels.ipynb
+++ b/VIMS_Panels.ipynb
@@ -1619,7 +1619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1641,6 +1641,7 @@
     "    mins = {}\n",
     "    dimensions = (x,y)\n",
     "    \n",
+    "    band_channels = [29,30,31,32,47,48,49,50,51,52,53,54,55,84,85,86,87,88,89,90] + [i for i in range(160,181)] \n",
     "    \n",
     "    for i in range(x):\n",
     "        for j in range(y):\n",
@@ -1666,8 +1667,10 @@
     "                    \n",
     "                except:\n",
     "                    #If powerlaw fit fails, directly fit gaussian\n",
-    "                    fit,cov = sco.curve_fit(gaussian, vims_wave[64:85],cube[64:85,i,j], p0=(2.08,.125,.1), maxfev=10000)\n",
-    "                \n",
+    "                    try:\n",
+    "                        fit,cov = sco.curve_fit(gaussian, vims_wave[64:85],cube[64:85,i,j], p0=(2.08,.125,.1), maxfev=1000000)\n",
+    "                    except:\n",
+    "                        break\n",
     "                max_real_amp = np.max(cube[64:85,i,j])\n",
     "                if maxes.get('max_real_amplitude',None) is None or maxes['max_real_amplitude'] < max_real_amp:\n",
     "                    maxes['max_real_amplitude'] = max_real_amp\n",
@@ -1718,7 +1721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1750,7 +1753,7 @@
     "    #print(viewing_geometries)\n",
     "    for folder in viewing_geometries:\n",
     "        print(f'Folder: {folder}')\n",
-    "        file.write(f'{folder}\\n')\n",
+    "        #file.write(f'{folder}\\n')\n",
     "        files = os.listdir(f'{master_directory}/{folder}')\n",
     "        #print(files)\n",
     "        for cube in files:\n",
@@ -1775,7 +1778,7 @@
     "            \n",
     "            lbl = pysis.CubeFile(f'{master_directory}/{folder}/{cube}').label\n",
     "            \n",
-    "            desc = {'name':cube,'dimensions':(lbl['IsisCube']['Instrument']['SwathLength'],\n",
+    "            desc = {'view':folder,'name':cube,'dimensions':(lbl['IsisCube']['Instrument']['SwathLength'],\n",
     "                                    lbl['IsisCube']['Instrument']['SwathWidth'])}\n",
     "            \n",
     "            maxes,mins = analyze_cube(data,nav,lbl['IsisCube']['Instrument']['SwathLength'],lbl['IsisCube']['Instrument']['SwathWidth'])\n",
@@ -1798,7 +1801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
@@ -1815,21 +1818,7 @@
       "Working on: CM_1625777215_1_ir.cub\n",
       "Working on: CM_1625777620_1_ir.cub\n",
       "Working on: CM_1625778429_1_ir.cub\n",
-      "Working on: CM_1625778564_12_ir.cub\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/alanyu/anaconda3/lib/python3.8/site-packages/scipy/optimize/minpack.py:828: OptimizeWarning: Covariance of the parameters could not be estimated\n",
-      "  warnings.warn('Covariance of the parameters could not be estimated',\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Working on: CM_1625778564_12_ir.cub\n",
       "Working on: CM_1625788353_1_ir.cub\n",
       "Working on: CM_1625776406_1_ir.cub\n",
       "Working on: CM_1625785908_1_ir.cub\n",
@@ -1884,6 +1873,25 @@
       "Working on: CM_1625777755_1_ir.cub\n",
       "Working on: CM_1625779530_1_ir.cub\n",
       "Working on: CM_1625777890_1_ir.cub\n",
+      "Folder: 2016127T223449_2016130T200342\n",
+      "Working on: CM_1841281547_1_ir.cub\n",
+      "Working on: CM_1841283690_1_ir.cub\n",
+      "Working on: CM_1841278414_1_ir.cub\n",
+      "Working on: CM_1841282090_1_ir.cub\n",
+      "Working on: CM_1841281273_1_ir.cub\n",
+      "Working on: CM_1841279980_1_ir.cub\n",
+      "Working on: CM_1841284507_1_ir.cub\n",
+      "Working on: CM_1841275013_1_ir.cub\n",
+      "Working on: CM_1841283964_1_ir.cub\n",
+      "Working on: CM_1841272581_1_ir.cub\n",
+      "Working on: CM_1841278020_1_ir.cub\n",
+      "Working on: CM_1841269234_1_ir.cub\n",
+      "Working on: CM_1841286170_1_ir.cub\n",
+      "Working on: CM_1841268447_1_ir.cub\n",
+      "Working on: CM_1841286444_1_ir.cub\n",
+      "Working on: CM_1841276017_1_ir.cub\n",
+      "Working on: CM_1841272098_1_ir.cub\n",
+      "Working on: CM_1841274509_1_ir.cub\n",
       "Folder: 2005359T100445_2005360T101919\n",
       "Working on: CM_1514277149_1_ir.cub\n",
       "Working on: CM_1514280779_1_ir.cub\n",
@@ -1902,10 +1910,30 @@
       "text/plain": [
        "{('CM_1514277149_1_ir.cub', 'lacking data'),\n",
        " ('CM_1514277541_1_ir.cub', 'resolution'),\n",
-       " ('CM_1514280779_1_ir.cub', 'lacking data')}"
+       " ('CM_1514280779_1_ir.cub', 'lacking data'),\n",
+       " ('CM_1841286987_1_ir.cub', 'resolution'),\n",
+       " ('CM_1841288670_1_ir.cub', 'resolution'),\n",
+       " ('CM_1841288944_9_ir.cub', 'resolution'),\n",
+       " ('CM_1841290630_1_ir.cub', 'resolution'),\n",
+       " ('CM_1841290892_1_ir.cub', 'resolution'),\n",
+       " ('CM_1841292710_1_ir.cub', 'resolution'),\n",
+       " ('CM_1841292972_1_ir.cub', 'resolution'),\n",
+       " ('CM_1841295610_5_ir.cub', 'resolution'),\n",
+       " ('CM_1841346547_1_ir.cub', 'resolution'),\n",
+       " ('CM_1841346809_1_ir.cub', 'resolution'),\n",
+       " ('CM_1841351414_1_ir.cub', 'resolution'),\n",
+       " ('CM_1841351567_1_ir.cub', 'resolution'),\n",
+       " ('CM_1841355994_1_ir.cub', 'resolution'),\n",
+       " ('CM_1841356068_1_ir.cub', 'resolution'),\n",
+       " ('CM_1841367934_1_ir.cub', 'resolution'),\n",
+       " ('CM_1841368069_1_ir.cub', 'resolution'),\n",
+       " ('CM_1841376779_1_ir.cub', 'resolution'),\n",
+       " ('CM_1841376895_1_ir.cub', 'resolution'),\n",
+       " ('CM_1841387557_1_ir.cub', 'resolution'),\n",
+       " ('CM_1841387657_8_ir.cub', 'resolution')}"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1913,6 +1941,70 @@
    "source": [
     "create_cube_parser('/home/alanyu/Dropbox (MIT)/VIMS_UROP/data')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/alanyu/anaconda3/lib/python3.8/site-packages/scipy/optimize/minpack.py:828: OptimizeWarning: Covariance of the parameters could not be estimated\n",
+      "  warnings.warn('Covariance of the parameters could not be estimated',\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "({'max_real_amplitude': 0.37406763,\n",
+       "  'max_mean': 44.480570945126644,\n",
+       "  'max_sigma': 19.042337266553897,\n",
+       "  'max_amplitude': 2.1609650266099266e+49,\n",
+       "  'max_incidence': 123.39848,\n",
+       "  'max_emission': 89.74572,\n",
+       "  'max_phase': 120.99549,\n",
+       "  'max_lat': 88.63443,\n",
+       "  'max_lon': 359.8052},\n",
+       " {'min_real_amplitude': 0.00032065713,\n",
+       "  'min_mean': -41.72438779902643,\n",
+       "  'min_sigma': -3.0424541052519247,\n",
+       "  'min_amplitude': -0.01103393520521871,\n",
+       "  'min_incidence': 32.634655,\n",
+       "  'min_emission': 0.92859846,\n",
+       "  'min_phase': 120.14005,\n",
+       "  'min_lat': 16.058416,\n",
+       "  'min_lon': 0.41456932})"
+      ]
+     },
+     "execution_count": 171,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = pysis.CubeFile('/home/alanyu/Dropbox (MIT)/VIMS_UROP/2016127T223449_2016130T200342/CM_1841281547_1_ir.cub').data\n",
+    "lbl = pysis.CubeFile('/home/alanyu/Dropbox (MIT)/VIMS_UROP/2016127T223449_2016130T200342/CM_1841281547_1_ir.cub').label\n",
+    "nav = pysis.CubeFile('/home/alanyu/Dropbox (MIT)/VIMS_UROP/2016127T223449_2016130T200342/CM_1841281547_1_ir_nav.cub').data\n",
+    "\n",
+    "\n",
+    "analyze_cube(data,nav,lbl['IsisCube']['Instrument']['SwathLength'],lbl['IsisCube']['Instrument']['SwathWidth'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
