--- a/VIMS_Panels.ipynb
+++ b/VIMS_Panels.ipynb
@@ -1721,7 +1721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1747,13 +1747,16 @@
     "    \n",
     "    '''\n",
     "    \n",
-    "    file = open('cube_data.txt','w')\n",
+    "    #file = open('cube_data.txt','w')\n",
     "    skipped=set()\n",
     "    viewing_geometries = os.listdir(master_directory)\n",
     "    #print(viewing_geometries)\n",
     "    for folder in viewing_geometries:\n",
+    "        file = open('cube_data.txt','a')\n",
     "        print(f'Folder: {folder}')\n",
     "        #file.write(f'{folder}\\n')\n",
+    "        if folder == '.DS_Store':\n",
+    "            continue\n",
     "        files = os.listdir(f'{master_directory}/{folder}')\n",
     "        #print(files)\n",
     "        for cube in files:\n",
@@ -1794,14 +1797,14 @@
     "            desc.update(mins)\n",
     "                  \n",
     "            file.write(f'{desc} \\n')\n",
-    "                  \n",
-    "    file.close()\n",
+    "        file.close()    \n",
+    "    #file.close()\n",
     "    return skipped"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -1933,7 +1936,7 @@
        " ('CM_1841387657_8_ir.cub', 'resolution')}"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 177,
      "metadata": {},
      "output_type": "execute_result"
     }
