--- a/VIMS_Panels.ipynb
+++ b/VIMS_Panels.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,6 +38,8 @@
     "import os\n",
     "import scipy.optimize as sco\n",
     "import time\n",
+    "import ast\n",
+    "from tkinter import *\n",
     "%matplotlib qt"
    ]
   },
@@ -1997,10 +1999,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def read_database(file_name):\n",
+    "    data = {}\n",
+    "    \n",
+    "    file = open(file_name,'r')\n",
+    "    while True:\n",
+    "        try:\n",
+    "            temp = ast.literal_eval(file.readline())\n",
+    "            name = temp['name']\n",
+    "            del(temp['name'])\n",
+    "            data.update({name:temp})\n",
+    "        except Exception as e:\n",
+    "            print(e)\n",
+    "            break\n",
+    "            \n",
+    "    file.close()\n",
+    "    \n",
+    "    return data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "unexpected EOF while parsing (<unknown>, line 0)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "523"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "read_database('cube_data.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'CM_1838530943_1_ir.cub': {'view': '2016096T054156_2016097T040514',\n",
+       "  'dimensions': (64, 46),\n",
+       "  'max_real_amplitude': 0.4440777,\n",
+       "  'max_mean': 30.7460228728227,\n",
+       "  'max_sigma': 5.604866381344292,\n",
+       "  'max_amplitude': 1.9206460834707575e+39,\n",
+       "  'max_incidence': 167.5496,\n",
+       "  'max_emission': 89.46845,\n",
+       "  'max_phase': 128.90904,\n",
+       "  'max_lat': 89.19383,\n",
+       "  'max_lon': 354.01587,\n",
+       "  'min_real_amplitude': 6.1433246e-05,\n",
+       "  'min_mean': -52.59100393397263,\n",
+       "  'min_sigma': -2.5958860532514874,\n",
+       "  'min_amplitude': -9.375792693159017e+33,\n",
+       "  'min_incidence': 44.918026,\n",
+       "  'min_emission': 0.15046662,\n",
+       "  'min_phase': 127.5899,\n",
+       "  'min_lat': -32.07777,\n",
+       "  'min_lon': 8.737222}}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dat = {}\n",
+    "f = open('cube_data.txt','r')\n",
+    "temp = ast.literal_eval(f.readline())\n",
+    "name = temp['name']\n",
+    "del(temp['name'])\n",
+    "dat.update({name:temp})\n",
+    "dat"
+   ]
   },
   {
    "cell_type": "code",
