Fixed bug in parse: define powerlaw and gaussian

--- a/VIMS_Panels.ipynb
+++ b/VIMS_Panels.ipynb
@@ -24,9 +24,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/alanyu/anaconda3/lib/python3.8/site-packages/pysis/env.py:33: RuntimeWarning: Could not find isis. Is `ISISROOT` set?\n",
+      "  warnings.warn('Could not find isis. Is `ISISROOT` set?', RuntimeWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "from IPython.core.display import HTML\n",
     "import numpy as np\n",
@@ -110,7 +119,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gaussian(x,mean,sigma,A):\n",
+    "def gdef gaussian(x,mean,sigma,A):\n",
+    "    \n",
+    "    return A*np.exp( -((x-mean)**2.) / (2.*sigma**2.) )\n",
+    "\n",
+    "def powerlaw(x,a, k, c):\n",
+    "    \n",
+    "    return a*x**k + c\n",
+    "aussian(x,mean,sigma,A):\n",
     "    \n",
     "    return A*np.exp( -((x-mean)**2.) / (2.*sigma**2.) )\n",
     "\n",
@@ -121,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +209,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.image.AxesImage at 0x7f26419e9130>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nav = pysis.CubeFile('/home/alanyu/Dropbox (MIT)/VIMS_UROP/2005359T100445_2005360T101919/CM_1514281143_1_ir_nav.cub').data\n",
+    "\n",
+    "plt.imshow(nav[6])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +339,7 @@
       " [0.         0.         0.         ... 0.03840013 0.03464055 0.02767562]\n",
       " [0.         0.         0.         ... 0.03563395 0.03121589 0.02398135]]\n",
       "0.0\n",
-      "Time: 2.2846262454986572\n"
+      "Time: 1.8555521965026855\n"
      ]
     }
    ],
