--- a/VIMS_Panels.ipynb
+++ b/VIMS_Panels.ipynb
@@ -115,9 +115,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-15-1eea652c9855>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-15-1eea652c9855>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    def gdef gaussian(x,mean,sigma,A):\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def gdef gaussian(x,mean,sigma,A):\n",
     "    \n",
@@ -126,13 +135,7 @@
     "def powerlaw(x,a, k, c):\n",
     "    \n",
     "    return a*x**k + c\n",
-    "aussian(x,mean,sigma,A):\n",
-    "    \n",
-    "    return A*np.exp( -((x-mean)**2.) / (2.*sigma**2.) )\n",
-    "\n",
-    "def powerlaw(x,a, k, c):\n",
-    "    \n",
-    "    return a*x**k + c\n"
+    "\n"
    ]
   },
   {
@@ -477,9 +480,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/alanyu/anaconda3/lib/python3.8/site-packages/scipy/optimize/minpack.py:828: OptimizeWarning: Covariance of the parameters could not be estimated\n",
+      "  warnings.warn('Covariance of the parameters could not be estimated',\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.         0.         0.         ... 0.00060426 0.00126782 0.00157523]\n",
+      " [0.         0.         0.         ... 0.00108926 0.00208359 0.00171547]\n",
+      " [0.         0.         0.         ... 0.00063724 0.00421932 0.0014823 ]\n",
+      " ...\n",
+      " [0.         0.         0.         ... 0.         0.         0.        ]\n",
+      " [0.         0.         0.         ... 0.         0.         0.        ]\n",
+      " [0.         0.         0.         ... 0.         0.         0.        ]]\n",
+      "-1.6982061423742842e+49\n",
+      "Time: 3.8688242435455322\n"
+     ]
+    }
+   ],
    "source": [
     "#Different viewing geometry - 2016127T223449_2016130T200342\n",
     "%matplotlib qt\n",
@@ -487,11 +514,11 @@
     "colorbar_2016 = [(0,.3),(-0.001,0.2),(2.02,2.05),(120,122),(0,80),(0,130),(-0.05,0.15),(-3,0)]\n",
     "\n",
     "\n",
-    "data7 = pysis.CubeFile('/home/alanyu/Dropbox (MIT)/VIMS_UROP/2016127T223449_2016130T200342/CM_1841269234_1_ir.cub').data\n",
-    "lbl7 = pysis.CubeFile('/home/alanyu/Dropbox (MIT)/VIMS_UROP/2016127T223449_2016130T200342/CM_1841269234_1_ir.cub').label\n",
-    "nav7 = pysis.CubeFile('/home/alanyu/Dropbox (MIT)/VIMS_UROP/2016127T223449_2016130T200342/CM_1841269234_1_ir_nav.cub').data\n",
+    "data7 = pysis.CubeFile('/home/alanyu/Dropbox (MIT)/VIMS_UROP/2016127T223449_2016130T200342/CM_1841286170_1_ir.cub').data\n",
+    "lbl7 = pysis.CubeFile('/home/alanyu/Dropbox (MIT)/VIMS_UROP/2016127T223449_2016130T200342/CM_1841286170_1_ir.cub').label\n",
+    "nav7 = pysis.CubeFile('/home/alanyu/Dropbox (MIT)/VIMS_UROP/2016127T223449_2016130T200342/CM_1841286170_1_ir_nav.cub').data\n",
     "\n",
-    "create_panels(data7, nav7,64,64,colorbar_2016)"
+    "create_panels(data7, nav7,46,32,colorbar_2016)"
    ]
   },
   {
