--- a/VIMS_Panels.ipynb
+++ b/VIMS_Panels.ipynb
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
     "    for i in range(x):\n",
     "        for j in range(y):\n",
     "            #incidence and emission < 70\n",
-    "            if nav[6,i,j] < -90 and nav[2,i,j]<70 and nav[3,i,j]<70:\n",
+    "            if nav[6,i,j] < -90:# and nav[2,i,j]<70 and nav[3,i,j]<70:\n",
     "                continue\n",
     "            else:\n",
     "                try:\n",
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,27 +313,28 @@
     "    ax9.title.set_text(\"Channel 69\")\n",
     "    channel = ax9.imshow(data[69,:,:])\n",
     "    plt.colorbar(channel,ax=ax9)\n",
-    "    #return array"
+    "    \n",
+    "    return array"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.         0.         0.         ... 0.         0.         0.        ]\n",
-      " [0.         0.         0.         ... 0.         0.         0.        ]\n",
-      " [0.         0.         0.         ... 0.         0.         0.        ]\n",
+      "[[0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
       " ...\n",
-      " [0.         0.         0.         ... 0.03005447 0.021433   0.        ]\n",
-      " [0.         0.         0.         ... 0.02654463 0.01766282 0.        ]\n",
-      " [0.         0.         0.         ... 0.0218084  0.01362918 0.        ]]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]]\n",
       "0.0\n",
-      "Time: 2.542465925216675\n"
+      "Time: 2.6527259349823\n"
      ]
     }
    ],
@@ -341,11 +342,43 @@
     "%matplotlib qt\n",
     "colorbar = [(0,.2),(0,.2),(2.02,2.04),(27,30),(0,80),(0,100),(0,0.1),(-3,-2)]\n",
     "\n",
-    "data = pysis.CubeFile('/home/alanyu/Dropbox (MIT)/VIMS_UROP/2005359T100445_2005360T101919/CM_1514280412_1_ir.cub').data\n",
-    "lbl = pysis.CubeFile('/home/alanyu/Dropbox (MIT)/VIMS_UROP/2005359T100445_2005360T101919/CM_1514280412_1_ir.cub').label\n",
-    "nav = pysis.CubeFile('/home/alanyu/Dropbox (MIT)/VIMS_UROP/2005359T100445_2005360T101919/CM_1514280412_1_ir_nav.cub').data\n",
+    "data = pysis.CubeFile('/home/alanyu/Dropbox (MIT)/VIMS_UROP/2005359T100445_2005360T101919/CM_1514284191_1_ir.cub').data\n",
+    "lbl = pysis.CubeFile('/home/alanyu/Dropbox (MIT)/VIMS_UROP/2005359T100445_2005360T101919/CM_1514284191_1_ir.cub').label\n",
+    "nav = pysis.CubeFile('/home/alanyu/Dropbox (MIT)/VIMS_UROP/2005359T100445_2005360T101919/CM_1514284191_1_ir_nav.cub').data\n",
     "\n",
-    "create_panels(data,nav,64,64,colorbar)"
+    "arr = create_panels(data,nav,64,64,colorbar)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "       0.        , 0.        , 2.03425434, 2.03247105, 2.03175802,\n",
+       "       2.03178498, 2.03261408, 2.03324308, 2.03356476, 2.03397213,\n",
+       "       2.03457666, 2.03441236, 2.03464708, 2.03467613, 2.03452071,\n",
+       "       2.03454015, 2.0342286 , 2.03384059, 2.03400003, 2.03374469,\n",
+       "       2.03349935, 2.0332013 , 2.03310115, 2.0330618 , 2.03304986,\n",
+       "       2.03315438, 2.03302854, 2.03306823, 2.03305127, 2.03318982,\n",
+       "       2.03376479, 2.03385133, 2.03332163, 2.03317939, 2.03307659,\n",
+       "       2.03286392, 2.03294678, 2.03297068, 2.03312785, 2.0332019 ,\n",
+       "       2.03338047, 2.03369662, 2.03432979, 2.03495608, 2.03598257,\n",
+       "       2.03689751, 2.03741758, 2.03808765, 2.0383666 , 2.03889162,\n",
+       "       2.03963683, 0.        , 0.        , 0.        , 0.        ,\n",
+       "       0.        , 0.        , 0.        , 0.        ])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr[0][15]"
    ]
   },
   {
