cleaned up spectra graphing

--- a/old/VIMS_UROP_Intro.ipynb
+++ b/old/VIMS_UROP_Intro.ipynb
@@ -28,13 +28,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# testing"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -106,12 +99,7 @@
     "import pysis\n",
     "data = pysis.CubeFile('/home/alanyu/Dropbox (MIT)/jupyter_folder/2005359T100445_2005360T101919/CM_1514281143_1_ir.cub').data\n",
     "lbl = pysis.CubeFile('/home/alanyu/Dropbox (MIT)/jupyter_folder/2005359T100445_2005360T101919/CM_1514281143_1_ir.cub').label\n",
-    "nav = pysis.CubeFile('/home/alanyu/Dropbox (MIT)/jupyter_folder/2005359T100445_2005360T101919/CM_1514281143_1_ir_nav.cub').data\n",
-    "\n",
-    "#print(data) \n",
-    "#print(lbl)\n",
-    "#type(nav)\n",
-    "print(nav[7,:,:])"
+    "nav = pysis.CubeFile('/home/alanyu/Dropbox (MIT)/jupyter_folder/2005359T100445_2005360T101919/CM_1514281143_1_ir_nav.cub').data\n"
    ]
   },
   {
