--- a/VIMS_Panels.ipynb
+++ b/VIMS_Panels.ipynb
@@ -4,16 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exploring Titan with Spectral Analysis\n",
-    "\n",
-    "(description)\n"
+    "<h3>Creating Panels from Cub Files<\\h3>\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Import Libraries\n",
+    "\n",
     "\n",
     "**Numpy**: Managing multi-dimensional arrays and curve fitting. [Numpy Documentation](https://numpy.org/doc/)  \n",
     "**Matplotlib**: Creating and displaying plots. [Matplotlib Documentation](https://matplotlib.org/3.3.3/contents.html)  \n",
