Begin dunes bounding box analysis

--- a/VIMS_Panels.ipynb
+++ b/VIMS_Panels.ipynb
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,12 +288,12 @@
     "    plt.colorbar(mean,ax=ax3)\n",
     "\n",
     "    #NAVIGATION\n",
-    "    ax4.title.set_text(\"Navigation - Phase\")\n",
-    "    phase = ax4.imshow(nav[1,:,:], vmin=cb[3][0],vmax=cb[3][1])\n",
+    "    ax4.title.set_text(\"Navigation - Latitude\")\n",
+    "    phase = ax4.imshow(nav[6,:,:], vmin=cb[3][0],vmax=cb[3][1])\n",
     "    plt.colorbar(phase, ax=ax4)\n",
     "\n",
-    "    ax5.title.set_text(\"Navigation - Emission\")\n",
-    "    emission = ax5.imshow(nav[2,:,:], vmin=cb[4][0], vmax=cb[4][1])\n",
+    "    ax5.title.set_text(\"Navigation - Longitude\")\n",
+    "    emission = ax5.imshow(nav[7,:,:], vmin=cb[4][0], vmax=cb[4][1])\n",
     "    plt.colorbar(emission,ax = ax5)\n",
     "\n",
     "    ax6.title.set_text(\"Navigation - Resolution\")\n",
@@ -317,22 +317,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.         0.         0.         ... 0.         0.         0.        ]\n",
-      " [0.         0.         0.         ... 0.         0.         0.        ]\n",
-      " [0.         0.         0.         ... 0.         0.         0.        ]\n",
-      " ...\n",
-      " [0.         0.         0.         ... 0.02828842 0.0201451  0.        ]\n",
-      " [0.         0.         0.         ... 0.02400371 0.01616337 0.        ]\n",
-      " [0.         0.         0.         ... 0.02028683 0.         0.        ]]\n",
-      "0.0\n",
-      "Time: 6.649694442749023\n"
+      "[[0.09238055 0.09513919 0.09727461 0.10345888 0.10553179 0.10455721\n",
+      "  0.1070046  0.10886843 0.11280612 0.11627475 0.11795457 0.11721015]\n",
+      " [0.09742893 0.09905374 0.10036997 0.10371968 0.10494154 0.1032526\n",
+      "  0.10700871 0.11132269 0.11176505 0.11502275 0.11765397 0.11853712]\n",
+      " [0.09918503 0.10048624 0.10200909 0.10316757 0.10451893 0.10214853\n",
+      "  0.1086002  0.11418888 0.11481186 0.11475785 0.11641312 0.11579157]\n",
+      " [0.09881292 0.10063119 0.10342476 0.10360045 0.10341934 0.09738237\n",
+      "  0.10068427 0.11106124 0.11232696 0.11294847 0.114951   0.11587909]\n",
+      " [0.0993788  0.10213735 0.10143463 0.10270686 0.10170414 0.0965184\n",
+      "  0.09129947 0.10075927 0.10925848 0.11151304 0.11540804 0.11879194]\n",
+      " [0.10114283 0.10154736 0.10034036 0.10132182 0.10030307 0.09720006\n",
+      "  0.10109187 0.10612852 0.10792911 0.11004411 0.11342383 0.11707295]\n",
+      " [0.10167955 0.10263635 0.09878723 0.10195235 0.09891819 0.10454888\n",
+      "  0.10704544 0.11485894 0.11269811 0.10605345 0.10402809 0.11539243]\n",
+      " [0.10187748 0.10216878 0.10329277 0.10748127 0.10856794 0.11131628\n",
+      "  0.1148491  0.11784021 0.11606563 0.1110897  0.11033996 0.11224851]\n",
+      " [0.10243863 0.10459114 0.10802957 0.11733014 0.11152801 0.11769181\n",
+      "  0.11776754 0.11743444 0.11742828 0.11238044 0.11093906 0.11107198]\n",
+      " [0.10388064 0.10721047 0.11046379 0.1201486  0.12284186 0.11917419\n",
+      "  0.11456888 0.11591429 0.12018694 0.116973   0.11088137 0.1123676 ]\n",
+      " [0.10373201 0.10849169 0.10790321 0.11449412 0.1184915  0.11443879\n",
+      "  0.11558001 0.11453727 0.12142963 0.11586899 0.11210831 0.10989185]\n",
+      " [0.1073039  0.10684194 0.11997119 0.1193906  0.11487264 0.10862678\n",
+      "  0.11177118 0.12482068 0.12894373 0.12560053 0.11462216 0.1106401 ]]\n",
+      "0.09129947093062882\n",
+      "Time: 0.34447216987609863\n"
      ]
     }
    ],
@@ -340,43 +357,31 @@
     "%matplotlib qt\n",
     "colorbar = [(0,.2),(0,.2),(2.02,2.04),(27,30),(0,80),(0,100),(0,0.1),(-3,-2)]\n",
     "\n",
-    "data = pysis.CubeFile('/home/alanyu/Dropbox (MIT)/VIMS_UROP/2005359T100445_2005360T101919/CM_1514280052_1_ir.cub').data\n",
-    "lbl = pysis.CubeFile('/home/alanyu/Dropbox (MIT)/VIMS_UROP/2005359T100445_2005360T101919/CM_1514280052_1_ir.cub').label\n",
-    "nav = pysis.CubeFile('/home/alanyu/Dropbox (MIT)/VIMS_UROP/2005359T100445_2005360T101919/CM_1514280052_1_ir_nav.cub').data\n",
+    "data = pysis.CubeFile('/home/alanyu/Downloads/CM_1477479701_1_ir.cub').data\n",
+    "lbl = pysis.CubeFile('/home/alanyu/Downloads/CM_1477479701_1_ir.cub').label\n",
+    "nav = pysis.CubeFile('/home/alanyu/Downloads/CM_1477479701_1_ir_nav.cub').data\n",
     "\n",
-    "arr = create_panels(data,nav,64,64,colorbar)"
+    "arr = create_panels(data,nav,12,12,colorbar)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "       0.        , 0.        , 2.03425434, 2.03247105, 2.03175802,\n",
-       "       2.03178498, 2.03261408, 2.03324308, 2.03356476, 2.03397213,\n",
-       "       2.03457666, 2.03441236, 2.03464708, 2.03467613, 2.03452071,\n",
-       "       2.03454015, 2.0342286 , 2.03384059, 2.03400003, 2.03374469,\n",
-       "       2.03349935, 2.0332013 , 2.03310115, 2.0330618 , 2.03304986,\n",
-       "       2.03315438, 2.03302854, 2.03306823, 2.03305127, 2.03318982,\n",
-       "       2.03376479, 2.03385133, 2.03332163, 2.03317939, 2.03307659,\n",
-       "       2.03286392, 2.03294678, 2.03297068, 2.03312785, 2.0332019 ,\n",
-       "       2.03338047, 2.03369662, 2.03432979, 2.03495608, 2.03598257,\n",
-       "       2.03689751, 2.03741758, 2.03808765, 2.0383666 , 2.03889162,\n",
-       "       2.03963683, 0.        , 0.        , 0.        , 0.        ,\n",
-       "       0.        , 0.        , 0.        , 0.        ])"
+       "(256, 12, 12)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "arr[0][15]"
+    "np.shape(data)"
    ]
   },
   {
