Made more clarifications

--- a/Dunes.ipynb
+++ b/Dunes.ipynb
@@ -54,6 +54,8 @@
    "source": [
     "<h2>Query</h2>  \n",
     "\n",
+    "Longitude is 360-x because of east/west\n",
+    "\n",
     "Small: SELECT * FROM public.vims_trial WHERE latitude<0 AND latitude>-15 AND longitude>110\n",
     "AND longitude<130 AND incidence>25 AND incidence<30 AND phase>15 AND phase<20 AND emission > 20 AND emission < 25;  \n",
     "  \n",
