Finish overlay analysis

--- a/VIMS_Panels.ipynb
+++ b/VIMS_Panels.ipynb
@@ -17,7 +17,8 @@
     "**Matplotlib**: Creating and displaying plots. [Matplotlib Documentation](https://matplotlib.org/3.3.3/contents.html)  \n",
     "**Pysis**: Reading .cub files into array format. [Pysis Documentation](https://pysis.readthedocs.io/en/latest/)     \n",
     "**os**: Navigating and viewing directories. [os Documentation](https://docs.python.org/3/library/os.html)  \n",
-    "**SciPy** Fitting Gaussian functions and power laws to data. [SciPy Documentation](https://www.scipy.org/docs.html)\n"
+    "**SciPy** Fitting Gaussian functions and power laws to data. [SciPy Documentation](https://www.scipy.org/docs.html)\n",
+    "\n"
    ]
   },
   {
